fix: let overflow on body

--- a/client/src/layouts/MainLayout.css
+++ b/client/src/layouts/MainLayout.css
@@ -1,9 +1,3 @@
-html,
-body,
-#root {
-  overflow: hidden;
-}
-
 .main-layout {
   display: flex;
   flex-direction: column;
